--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<html> Hello World! Go Away! Seriously, I don't want you here. GO NOW. GET OFF. STOP READING THIS!!! </html>
+<html> Hello World! Go Away! Seriously, I don't want you here. GO NOW. GET OFF. STOP READING THIS!!! <P><IMG SRC="http://www.canadamats.ca/media/catalog/product/cache/1/image/650x/040ec09b1e35df139433887a97daa66f/g/o/go-away-synonym-doormat.jpg"> </html>
 
